# leanatlas

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DOC_PACK_ID.json  INIT_FOR_CODEX.md  LeanAtlas.lean  Problems.lean  README.md  lake-manifest.json  lakefile.lean  pyproject.toml
.github/workflows/: generated-doc-guardrails.yml
LeanAtlas/: AGENTS.md
LeanAtlas/Incubator/: README.md
LeanAtlas/Kernel/: README.md
LeanAtlas/Toolbox/: Imports.lean
Problems/: AGENTS.md
Problems/_template/: Cache.lean  Proof.lean  Scratch.lean  Spec.lean  State.json
automations/: README.md  registry.json
docs/agent_eval/: MENTOR_KEYWORDS_CLASSICS.md
docs/agents/: AUTOMATIONS.md  BRANDING.md  CODEX_APP_PROMPTS.md  EVAL_PROBLEM_PACK_GUIDE.md  FEEDBACK_LOOP.md  GLOSSARY.md  LOOP_MAINLINE.md  MAINTAINER_INIT_TASKS.md  MAINTAINER_TODO.md  MAINTAINER_WORKFLOW.md  MEMORY_COVERAGE.md  ONBOARDING.md  OPERATOR_WORKFLOW.md  PLANS.md  README.md  STATUS.md  VERSION_ROADMAP.md
docs/contracts/: AGENT_EVAL_CONTRACT.md  AGENT_EVAL_SCENARIO_CONTRACT.md  AI_NATIVE_ENGINEERING_CONTRACT.md  AUTOMATION_CONTRACT.md  BENCH_CONTRACT.md  CAPABILITY_MANIFEST_CONTRACT.md  DETERMINISM_CONTRACT.md  E2E_CONTRACT.md  E2E_SCENARIO_CONTRACT.md  (+29 more)
examples/: looplib_quickstart.py
looplib/: __init__.py  preferences.py  review.py  runtime.py  session.py
scripts/: bootstrap.sh  clean.sh  clobber.sh  doctor.sh  import_edges_from_source.lean  install_repo_git_hooks.sh  lake_lint_driver.sh  lake_test_driver.sh
tests/: AGENTS.md  README.md  lint.py  manifest.json  run.py
tools/: AGENTS.md
(+703 files in other folders)
